cabal-version:      3.4
name:               advent-of-code-twentytwo
version:            0.1.0.0
synopsis:           Advent of code, 2022
description:
  Please see the README at <https://github.com/dschrempf/advent-of-code-twentytwo#readme>

category:           Math, Statistics
homepage:
  https://github.com/dschrempf/advent-of-code-twentytwo#readme

bug-reports:
  https://github.com/dschrempf/advent-of-code-twentytwo/issues

author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2022 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.md
  Readme.md

extra-source-files:
data-files:

source-repository head
  location: https://github.com/dschrempf/advent-of-code-twentytwo
  type:     git

common common
  default-extensions:

common lib
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common test
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common bench
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common exec
  default-language: Haskell2010
  ghc-options:
    -Wall -Wunused-packages -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

executable day01
  import:          common, exec
  main-is:         Day01.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , text

executable day02
  import:          common, exec
  main-is:         Day02.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , text

executable day03
  import:          common, exec
  main-is:         Day03.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , containers
    , text

executable day04
  import:          common, exec
  main-is:         Day04.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , bytestring

executable day05
  import:          common, exec
  main-is:         Day05.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , bytestring

executable day06
  import:          common, exec
  main-is:         Day06.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base  >=4.7 && <5
    , text

executable day07
  import:          common, exec
  main-is:         Day07.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , containers
    , text

executable day08
  import:          common, exec
  main-is:         Day08.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base      >=4.7 && <5
    , matrices
    , vector
